atksocket: Free 'embedded_plug_id' when destroyed, overriding finalize()

https://bugzilla.gnome.org/show_bug.cgi?id=699256